<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-25 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<resources>

    <!-- Dolby Atmos -->
    <string name="dolby_title">Dolby Atmos</string>
    <string name="dolby_enable">Use Dolby Atmos</string>
    <string name="dolby_profile_title">Choose a profile</string>
    <string name="dolby_preset">Graphic equalizer</string>
    <string name="dolby_off">Off</string>
    <string name="dolby_on">On</string>
    <string name="dolby_low">Low</string>
    <string name="dolby_medium">Medium</string>
    <string name="dolby_high">High</string>
    <string name="dolby_max">Max</string>
    <string name="dolby_unknown">Unknown</string>
    <string name="dolby_on_with_profile">On (%1$s)</string>
    <string name="dolby_category_settings">Settings</string>
    <string name="dolby_category_adv_settings">Advanced settings</string>
    <string name="dolby_adv_settings_footer">Choose a different profile to show advanced settings.</string>
    <string name="dolby_bass_enhancer">Bass enhancer</string>
    <string name="dolby_dialogue_enhancer">Dialogue enhancer</string>
    <string name="dolby_spk_virtualizer">Speaker surround virtualizer</string>
    <string name="dolby_hp_virtualizer">Headphone surround virtualizer</string>
    <string name="dolby_volume_leveler">Volume leveler</string>
    <string name="dolby_bass_enhancer_summary">Enhances low-frequency sounds for deeper bass</string>
    <string name="dolby_dialogue_enhancer_summary">Improves clarity of voices and speech</string>
    <string name="dolby_spk_virtualizer_summary">Creates virtual surround sound on speakers</string>
    <string name="dolby_hp_virtualizer_summary">Creates virtual surround sound on headphones</string>
    <string name="dolby_volume_leveler_summary">Balances volume for a consistent listening experience</string>
    <string name="dolby_connect_headphones">Connect headphones</string>
    <string name="dolby_reset_all">Reset profiles</string>
    <string name="dolby_reset_all_message">This will reset all profiles to factory defaults.</string>
    <string name="dolby_reset_all_toast">Succesfully reset all profiles</string>
    <string name="dolby_strength">Strength</string>
    <string name="dolby_hp_virtualizer_dolby_strength">Surround virtualizer Strength</string>
    <string name="dolby_dialogue_enhancer_dolby_strength">Dialogue enhancer Strength</string>

    <!-- Dolby profiles -->
    <string name="dolby_profile_dynamic">Dynamic</string>
    <string name="dolby_profile_video">Movie/Video</string>
    <string name="dolby_profile_music">Music</string>
    <string name="dolby_profile_custom">Custom</string>

    <!-- Dolby equalizer presets -->
    <string name="dolby_preset_default">Flat (off)</string>
    <string name="dolby_preset_rock">Rock</string>
    <string name="dolby_preset_jazz">Jazz</string>
    <string name="dolby_preset_pop">Pop</string>
    <string name="dolby_preset_classical">Classical</string>
    <string name="dolby_preset_hiphop">Hip Hop</string>
    <string name="dolby_preset_blues">Blues</string>
    <string name="dolby_preset_electronic">Electronic</string>
    <string name="dolby_preset_country">Country</string>
    <string name="dolby_preset_dance">Dance</string>
    <string name="dolby_preset_metal">Metal</string>
    <string name="dolby_preset_custom">Custom</string>

    <!-- Dolby equalizer UI -->
    <string name="dolby_geq_slider_label_gain">Gain</string>
    <string name="dolby_geq_preset">Preset</string>
    <string name="dolby_geq_preset_name">Preset name</string>
    <string name="dolby_geq_new_preset">New preset</string>
    <string name="dolby_geq_rename_preset">Rename preset</string>
    <string name="dolby_geq_delete_preset">Delete preset</string>
    <string name="dolby_geq_delete_preset_prompt">Do you want to delete this preset?</string>
    <string name="dolby_geq_reset_gains">Reset gains</string>
    <string name="dolby_geq_reset_gains_prompt">Do you want to reset this preset to defaults?</string>
    <string name="dolby_geq_preset_name_exists">Preset name already exists!</string>
    <string name="dolby_geq_preset_name_too_long">Preset name is too long!</string>

    <!-- Dolby intelligent EQ -->
    <string name="dolby_ieq">Intelligent equalizer</string>
    <string name="dolby_balanced">Balanced</string>
    <string name="dolby_warm">Warm</string>
    <string name="dolby_detailed">Detailed</string>

</resources>
