<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-25 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/dolby_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="dolby_enable"
        android:title="@string/dolby_enable" />

    <ListPreference
        android:key="dolby_profile"
        android:dependency="dolby_enable"
        android:entries="@array/dolby_profile_entries"
        android:entryValues="@array/dolby_profile_values"
        android:defaultValue="0"
        android:title="@string/dolby_profile_title"
        android:summary="%s"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="dolby_category_settings"
        android:title="@string/dolby_category_settings"
        android:dependency="dolby_enable">

        <Preference
            android:key="dolby_preset"
            android:title="@string/dolby_preset">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.dolby.xiaomi"
                android:targetClass="co.aospa.dolby.xiaomi.geq.EqualizerActivity" />
        </Preference>

        <SwitchPreferenceCompat
            android:key="dolby_bass"
            android:title="@string/dolby_bass_enhancer"
            android:summary="@string/dolby_bass_enhancer_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dolby_category_adv_settings"
        android:title="@string/dolby_category_adv_settings"
        android:dependency="dolby_enable">

        <co.aospa.dolby.xiaomi.preference.DolbyIeqPreference
            android:key="dolby_ieq"
            android:entries="@array/dolby_ieq_entries"
            android:entryValues="@array/dolby_ieq_values"
            android:title="@string/dolby_ieq" />

        <SwitchPreferenceCompat
            android:key="dolby_spk_virtualizer"
            android:title="@string/dolby_spk_virtualizer"
            android:summary="@string/dolby_spk_virtualizer_summary"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="dolby_virtualizer"
            android:title="@string/dolby_hp_virtualizer"
            android:summary="@string/dolby_hp_virtualizer_summary"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="dolby_stereo_widening"
            android:title="@string/dolby_hp_virtualizer_dolby_strength"
            android:dependency="dolby_virtualizer"
            android:min="@integer/stereo_widening_min"
            android:max="@integer/stereo_widening_max"/>

        <SwitchPreferenceCompat
            android:key="dolby_dialogue_enabled"
            android:title="@string/dolby_dialogue_enhancer"
            android:summary="@string/dolby_dialogue_enhancer_summary"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="dolby_dialogue_amount"
            android:title="@string/dolby_dialogue_enhancer_dolby_strength"
            android:dependency="dolby_dialogue_enabled"
            android:min="@integer/dialogue_enhancer_min"
            android:max="@integer/dialogue_enhancer_max"/>

        <SwitchPreferenceCompat
            android:key="dolby_volume"
            android:title="@string/dolby_volume_leveler"
            android:summary="@string/dolby_volume_leveler_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="dolby_adv_settings_footer"
        android:title="@string/dolby_adv_settings_footer"
        android:selectable="false" />

</PreferenceScreen>
